# wearable-biosensors-ros2

./: README.md  pi_startup.sh  script.sh  setup.sh  startup_script.sh
VitalLogs/: heartrate.txt  manual_button_press.txt  respiration.txt  vital_logger_manual.py
cdcl-humble-jammy-biosensors/: Dockerfile  run.sh  runterm.sh  startup_script.sh  wifi_connect.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cdcl_umd_msgs/share/cdcl_umd_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cdcl_umd_msgs/share/cdcl_umd_msgs/action/: WaypointNavigation.action  WaypointNavigation.idl
install/emotiv_insight/lib/emotiv_insight/: emotiv_insight_node
install/emotiv_insight/share/emotiv_insight/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2-emotiv_insight.launch.py
install/empatica_e4/lib/empatica_e4/: empatica_e4_node
install/empatica_e4/share/empatica_e4/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2-empatica_E4.launch.py
install/manager/lib/manager/: vital_logger.py  vitaldata.launch
install/manager/share/manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/mcap_vendor/share/mcap_vendor/: local_setup.sh  package.dsv  package.ps1  package.sh
install/polar_h10/lib/polar_h10/: polar_h10_node
install/polar_h10/share/polar_h10/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2-polar_h10.launch.py
install/rosbag2_cpp/share/rosbag2_cpp/: package.bash  package.zsh
install/rosbag2_interfaces/share/rosbag2_interfaces/: package.bash  package.sh  package.zsh
install/rosbag2_storage/share/rosbag2_storage/: package.bash  package.sh  package.zsh
install/rosbag2_storage_default_plugins/share/rosbag2_storage_default_plugins/: package.bash  package.sh  package.zsh
install/rosbag2_storage_mcap/share/rosbag2_storage_mcap/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rosbag2_storage_mcap_testdata/share/rosbag2_storage_mcap_testdata/: package.dsv  package.ps1  package.sh
install/rosbag2_test_common/share/rosbag2_test_common/: local_setup.sh  package.sh
install/shared_queues_vendor/share/shared_queues_vendor/: local_setup.sh  package.sh
install/shimmer3_gsr_unit/lib/shimmer3_gsr_unit/: shimmer_gsr_ppg_node
install/shimmer3_gsr_unit/share/shimmer3_gsr_unit/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2-shimmer3_gsr.launch.py
install/sqlite3_vendor/share/sqlite3_vendor/: package.sh
install/vernier_respiration_belt/lib/vernier_respiration_belt/: vernier_respiration_belt_node
install/vernier_respiration_belt/share/vernier_respiration_belt/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2-vernier_respiration_belt.launch.py
install/zstd_vendor/share/zstd_vendor/: local_setup.sh  package.sh
log/: latest_build  latest_list
ros_bags/rosbag2_2024_06_17-20_36_35/: rosbag2_2024_06_17-20_36_35_0.db3
ros_bags/rosbag2_2024_06_17-21_11_11/: metadata.yaml  rosbag2_2024_06_17-21_11_11_0.db3
ros_bags/rosbag2_2024_06_17-21_47_55/: metadata.yaml  rosbag2_2024_06_17-21_47_55_0.db3
ros_bags/rosbag2_2024_06_17-21_52_21/: metadata.yaml  rosbag2_2024_06_17-21_52_21_0.db3
ros_bags/rosbag2_2024_06_17-21_59_43/: rosbag2_2024_06_17-21_59_43_0.db3
ros_bags/rosbag2_2024_07_02-13_04_00/: metadata.yaml
ros_bags/rosbag2_2024_07_02-16_24_42/: metadata.yaml
ros_bags/rosbag2_2024_07_02-20_10_26/: metadata.yaml  rosbag2_2024_07_02-20_10_26_0.db3
ros_bags/rosbag2_2024_07_04-19_14_31/: metadata.yaml  rosbag2_2024_07_04-19_14_31_0.db3
ros_bags/rosbag2_2024_07_05-14_18_52/: metadata.yaml  rosbag2_2024_07_05-14_18_52_0.db3
ros_bags/rosbag2_2024_07_05-14_21_02/: metadata.yaml  rosbag2_2024_07_05-14_21_02_0.db3
ros_bags/rosbag2_2024_07_07-15_33_06/: metadata.yaml  rosbag2_2024_07_07-15_33_06_0.db3
ros_bags/rosbag2_2024_07_07-15_33_53/: metadata.yaml  rosbag2_2024_07_07-15_33_53_0.db3
ros_bags/rosbag2_2024_07_09-14_17_19/: metadata.yaml  rosbag2_2024_07_09-14_17_19_0.db3
ros_bags/rosbag2_2024_07_09-14_17_33/: metadata.yaml
ros_bags/rosbag2_2024_07_09-19_55_03/: metadata.yaml
ros_bags/rosbag2_2024_07_09-20_34_37/: metadata.yaml
ros_bags/rosbag2_2024_07_12-01_44_12/: metadata.yaml
ros_bags/rosbag2_2024_07_13-04_46_12/: metadata.yaml
ros_bags/rosbag2_2024_07_13-04_46_23/: metadata.yaml
ros_bags/rosbag2_2024_07_13-22_48_55/: metadata.yaml
src/cdcl_umd_msgs/: CMakeLists.txt  package.xml
src/cdcl_umd_msgs/action/: IsSpeaking.action  WaypointNavigation.action
src/cdcl_umd_msgs/msg/: Speech.msg
src/cdcl_umd_msgs/msg/casualty_report/: AlertnessMotor.msg  AlertnessVerbal.msg
src/cdcl_umd_msgs/msg/casualty_report/classifiers/: Resnet18ClassifierObservations.msg
src/cdcl_umd_msgs/msg/navigation/: SpotStatus.msg
src/cdcl_umd_msgs/msg/target_tracking/: Target.msg
src/manager/: CMakeLists.txt  package.xml  vital_logger.py
src/manager/launch/: collector.launch.py
src/manager/manager/: vital_logger.py
src/polar_h10/polar_h10/: polar_h10_node.py
src/vernier_respiration_belt/launch/: ros2-vernier_respiration_belt.launch.py
src/vernier_respiration_belt/vernier_respiration_belt/: vernier_respiration_belt_node.py
util_scripts/: bag_manager.py  docker_manager.py  vital_logger_manual.py
(+714 files in other folders)
