<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jj@todo.todo">jj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros2bag</depend>
  <exec_depend>cdcl_umd_msgs</exec_depend>
  <exec_depend>vernier_respiration_belt</exec_depend>
  <exec_depend>polar_h10</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
